[project]
name = "langraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langchain-openrouter>=0.2.3",
    "python-dotenv>=1.2.2",
]
